test/org/midica/testfiles/failing/macro-open-at-eof.midica
INCLUDE_FILE inc/instruments.midica

MACRO test
	0 c /4
	0 d /4
